<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <View
            android:id="@+id/top_view_home"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bg_view_home"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="5"
            android:columnCount="2"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/top_view_home">

            <TextView
                android:id="@+id/benefitsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/benefits"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_columnSpan="2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_workspaces"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/benefit1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/benefit1"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_fact_check"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/benefit2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/benefit2"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/releaseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black"
                android:layout_columnSpan="2"
                android:layout_marginTop="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_calendar"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/release1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release1"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_upload_file"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/release2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release2"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>